--- a/Szamitogep neme/index.html
+++ b/Szamitogep neme/index.html
@@ -22,13 +22,14 @@
 		<img src='./letöltés.png'/> 
 		Kép elérése, ha egy olyan mappában van, amely abban a mappában van, amelyben az index.html állomány található.
 		<img src='./images/letöltés.png'/> -->
-	<div>
-			<hr />
+			<div>
+			<hr/>
 			<h1>A Lausanne-i Egyetem kutatási eredménye</h1>
 			<h3>A számítógép neméről</h3>
 			<p>Egy svájci vizsgálatban egy nőkből és egy férfiakból álló csoportnak azt kellett megmondania, hogy milyen nemű a számítógép, és négy érvvel kellett alátámasztaniuk álláspontjukat.</p>
 			<div class='belso'>
-				<p>A női szakértőcsoport hímneműnek találta a számítógépet, mert:</p>
+				<img src='./male.png' alt='male.png' />
+				<p>A <em>női szakértőcsoport</em> <b>hímnemű</b>nek találta a számítógépet, mert:</p>
 				<ul>
 					<li>Előbb be kell kapcsolni, hogy aztán odafigyeljen az emberre.</li>
 					<li>Tele van információval, de nincs fantáziája.</li>
@@ -37,7 +38,8 @@
 				</ul>	
 			</div>
 			<div class='belso'>
-				<p>A férfi szakértőcsoport szerint a számítógép nőnemű, mert:</p>
+				<img src='./female.png' alt='female.png' />
+				<p>A <em>férfi szakértőcsoport</em> szerint a számítógép <b>nőnemű</b>, mert:</p>
 				<ul>
 					<li>Csak a teremtője érti a belső logikáját.</li>
 					<li>Az a nyelv, amin egy másik számítógéppel beszél, teljesen érthetetlen.</li>
@@ -45,7 +47,9 @@
 					<li>Mihelyt az embernek van egy, rögtön rájön, hogy a keresetének felét kiegészítőkre kénytelen költeni.</li>
 				</ul>
 			</div>		
-			<hr />
+			<hr style='clear:both'/>
+			<p style='float:right;'>&copy; Lausanne, 2016</p>
+		</div>
 	</div>			
 </body>	
 </html>
